# archstatus

./: README.md  meson.build
.github/workflows/: release.yaml
include/: archstatus.h  constants.h  front.h  logo.h  results.h  sanitize.h
src/: archstatus.c  front.c  logo.c  main.c  sanitize.c
